fix loader z-index

--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -9,7 +9,7 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 
   position: fixed;
-  z-index: 1;
+  z-index: $header-z-index;
   height: $header-height;
   background: $primary-color;
   top: 0;
